<resources>
    <string name="app_name">EgarCalfFarm</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
<!--    <string name="enter_id">enter id</string>-->
    <string name="enter_name">enter name</string>
    <string name="enter_email">enter email</string>
    <string name="enter_id">enter id</string>
    <string name="save">Save</string>
    <string name="view">View</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="user_id">User Id</string>
    <string name="share">share</string>
    <!--    <string name="user_id">User Id</string>-->
</resources>