<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/save"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="9dp"
    android:layout_marginTop="9dp"
    android:layout_marginEnd="9dp"
    android:layout_marginBottom="9dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.EgarCalfFarm.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.EgarCalfFarm.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

<!--    <include layout="@layout/content_main" />-->

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/user_id" />

            <EditText

                android:id="@+id/u_id"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:width="150px"
                android:inputType="numberSigned"
                android:importantForAutofill="no" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/user_name" />

            <EditText
                android:id="@+id/u_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:width="200dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/user_email" />

            <EditText
                android:id="@+id/u_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:width="200dp" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="350sp"
        android:layout_marginTop="20sp">

        <ListView
            android:id="@+id/listView"
            android:layout_width="wrap_content"
            android:layout_height="289dp" />




    </LinearLayout>

    <LinearLayout
        android:layout_width="393dp"
        android:layout_height="61dp"
        android:layout_gravity="center"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="77dp"
            android:layout_height="50dp"
            android:onClick="saveRecord"
            android:text="@string/save" />

        <Button
            android:id="@+id/view"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:onClick="viewRecord"
            android:text="@string/view" />

        <Button
            android:id="@+id/btn_share"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:onClick="viewRecord"
            android:text="@string/share" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="393dp"
        android:layout_height="61dp"
        android:layout_gravity="center"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        android:padding="10dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="deleteRecord"
            android:text="@string/delete" />



    </LinearLayout>
</LinearLayout>





